--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -137,16 +137,32 @@ ext.isStartupFromDocker = {
 
 if (!hasProperty("profile")) {
     if (isBuildImage()) {
-        ext.profile = "docker" + env
-    } else {
+        ext.profile =  env  + "-docker"
+    } else if (isSkaffoldBuild()) {
+        ext.profile =  env  + "-k8s"
+    }  else {
 //        println("Check ${isNativeTask()}")
         if (isNativeTask()) {
-            ext.profile = "native" + env
+            ext.profile = env +"-baremetal"
         } else {
-            ext.profile = env
+            ext.profile = env + "-baremetal"
         }
     }
 }
+
+
+def deployEnv;
+if (isSkaffoldBuild()){
+    deployEnv = env + "_k8s"
+} else if (isBuildImage()) {
+    deployEnv = env + "_docker"
+} else if (isStartupOrPackagingExcludingImageBuild()){
+    deployEnv = env + "_baremetal"
+} else {
+    deployEnv = env 
+}
+ext.deployEnv = deployEnv
+
 logger.info("Use ${profile} profile")
 
 println "Executing ${project.gradle.startParameter.taskNames}, ignoredEnv ${ignoredEnv()}"
