refactor(autoConfigure.gradle): remove hardcoded docker registry credentials and rely on dynamic auth retrieval refactor(jibBuildProject.gradle): replace hardcoded docker registry credentials with dynamic auth retrieval using getDockerRegisteryAuth function feat(startinfra.py): update docker registry credentials retrieval to use infra_docker_registry config instead of separate user and password fields

--- a/config/gradle/autoConfigure.gradle
+++ b/config/gradle/autoConfigure.gradle
@@ -128,18 +128,19 @@ if (isProd(env)) {
 }
 
 
-def dockerRegistryUser = getConfigValue('docker_registry_user',env, '')
-def dockerRegistryPassword = getConfigValue('docker_registry_password',env, '')
-if (dockerRegistryUser !== '') {
-    ext.dockerUsername = dockerRegistryUser
-    ext.dockerPassword = dockerRegistryPassword
-}
+// def dockerRegistryUser = getConfigValue('docker_registry_user',env, '')
+// def dockerRegistryPassword = getConfigValue('docker_registry_password',env, '')
+// if (dockerRegistryUser !== '') {
+//     ext.dockerUsername = dockerRegistryUser
+//     ext.dockerPassword = dockerRegistryPassword
+// }
 
 
 ext.getDockerRegisteryAuth = { repo  ->
     def dockerRegistryAuths = getConfigValue('docker_registry_auth',env)
     def auth;
     dockerRegistryAuths.each { key, value ->
+        println("Checking auth for ${key}, ${repo}")
         if (repo.contains(key)) {
             auth = value
         }
